--- a/Spring-data-jpa/src/main/resources/application.properties
+++ b/Spring-data-jpa/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Spring-data-jpa
 spring.datasource.url=jdbc:postgresql://localhost:5432/students
-spring.datasource.username= postgres
-spring.datasource.password= pa$$w0rd
+spring.datasource.username=
+spring.datasource.password= 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
